--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 
 #panel-control > button {
